Update the windows bat files to remove the java extensions directory override and add a generic MERLIN_JVMARGS value.
git-svn-id: https://svn.apache.org/repos/asf/avalon/trunk@18459 13f79535-47bb-0310-9956-ffa450edef68