@@ -1,11 +1,8 @@
 @echo off
 if "%MERLIN_HOME%" == "" set MERLIN_HOME=%USERPROFILE%\.merlin
-
-:MerlinRuntime
 set MERLIN_CMD_LINE_ARGS=%*
 set MERLIN_BOOTSTRAP_JAR=%MERLIN_HOME%\bin\lib\merlin-cli-3.2.jar
-set MERLIN_EXT_DIR=%MERLIN_HOME%\ext
-java -Djava.security.policy=%MERLIN_HOME%\bin\security.policy -Djava.ext.dirs=%MERLIN_EXT_DIR% -jar %MERLIN_BOOTSTRAP_JAR% %MERLIN_CMD_LINE_ARGS%
+set MERLIN_SECURITY_POLICY=-Djava.security.policy=%MERLIN_HOME%\bin\security.policy
+java %MERLIN_SECURITY_POLICY% %MERLIN_JVMARGS% -jar %MERLIN_BOOTSTRAP_JAR% %MERLIN_CMD_LINE_ARGS%
 goto EndOfScript
-
 :EndOfScript
